--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   build:
-    if: github.repository == 'kalencaya/carp'
+    if: github.repository == 'flowerfine/carp'
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
