feature: add basic module

--- a/tools/docker/local/docker-compose.yml
+++ b/tools/docker/local/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - MYSQL_ROOT_USER=root
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_AUTHENTICATION_PLUGIN=mysql_native_password
-      - MYSQL_DATABASE=scaleph
+      - MYSQL_DATABASE=carp
     ports:
       - 3306:3306
     healthcheck:
@@ -62,15 +62,6 @@ services:
     ports:
       - 9000:9000
       - 9001:9001
-    networks:
-      - scaleph
-
-  gravitino:
-    image: datastrato/gravitino:0.5.0
-    container_name: gravitino
-    ports:
-      - 8090:8090
-    restart: unless-stopped
     networks:
       - scaleph
 
