feature: add basic module

--- a/carp-server/src/main/resources/application-dev.yml
+++ b/carp-server/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@
 #
 
 spring:
-  datasource:
+  datasource.carp:
     master:
       driver-class-name: com.mysql.cj.jdbc.Driver
       jdbc-url: jdbc:mysql://${MYSQL_HOST:127.0.0.1}:${MYSQL_PORT:3306}/carp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useAffectedRows=true
