--- a/carp-framework/carp-framework-common/pom.xml
+++ b/carp-framework/carp-framework-common/pom.xml
@@ -62,6 +62,10 @@
             <groupId>cn.sliew</groupId>
             <artifactId>milky-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.sliew</groupId>
+            <artifactId>milky-registry</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
