feature: add security module

--- a/carp-modules/carp-module-security/carp-module-security-core/pom.xml
+++ b/carp-modules/carp-module-security/carp-module-security-core/pom.xml
@@ -22,20 +22,24 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-module-security</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-server</artifactId>
+    <artifactId>carp-module-security-core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-web</artifactId>
+            <artifactId>carp-framework-common</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-security-core</artifactId>
+            <artifactId>carp-framework-mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-web</artifactId>
         </dependency>
     </dependencies>
-
 </project>
