--- a/carp-modules/carp-module-security/carp-module-security-spring/pom.xml
+++ b/carp-modules/carp-module-security/carp-module-security-spring/pom.xml
@@ -22,20 +22,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-module-security</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-server</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-security-core</artifactId>
-        </dependency>
-    </dependencies>
+    <artifactId>carp-module-security-spring</artifactId>
 
 </project>
