--- a/carp-modules/carp-module-security/pom.xml
+++ b/carp-modules/carp-module-security/pom.xml
@@ -22,20 +22,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-modules</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-server</artifactId>
+    <artifactId>carp-module-security</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-security-core</artifactId>
-        </dependency>
-    </dependencies>
-
+    <modules>
+        <module>carp-module-security-core</module>
+        <module>carp-module-security-spring</module>
+    </modules>
 </project>
