--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
         <module>carp-plugins</module>
         <module>carp-server</module>
         <module>carp-support</module>
+        <module>carp-modules</module>
     </modules>
 
     <properties>
@@ -161,12 +162,18 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>carp-framework-web</artifactId>
+                <artifactId>carp-framework-mybatis</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>carp-framework-mybatis</artifactId>
+                <artifactId>carp-framework-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-security-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
