--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <module>carp-server</module>
         <module>carp-support</module>
         <module>carp-modules</module>
+        <module>carp-modules/carp-module-security/carp-module-security-sa-token</module>
     </modules>
 
     <properties>
@@ -113,6 +114,7 @@
         <velocity.engine.version>2.2</velocity.engine.version>
         <mysql.version>8.3.0</mysql.version>
 
+        <sa-token.version>1.38.0</sa-token.version>
         <knife4j.version>4.4.0</knife4j.version>
         <hadoop.version>3.3.4</hadoop.version>
         <pekko.version>1.0.3-M1</pekko.version>
@@ -285,6 +287,12 @@
                 <artifactId>mysql-connector-j</artifactId>
                 <scope>runtime</scope>
                 <version>${mysql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${sa-token.version}</version>
             </dependency>
 
             <dependency>
