--- a/carp-modules/carp-module-security/pom.xml
+++ b/carp-modules/carp-module-security/pom.xml
@@ -32,5 +32,6 @@
     <modules>
         <module>carp-module-security-core</module>
         <module>carp-module-security-spring</module>
+        <module>carp-module-security-sa-token</module>
     </modules>
 </project>
