--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <module>carp-server</module>
         <module>carp-support</module>
         <module>carp-modules</module>
-        <module>carp-modules/carp-module-security/carp-module-security-sa-token</module>
+        <module>carp-dist</module>
     </modules>
 
     <properties>
@@ -91,6 +91,8 @@
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.test.skip>true</maven.test.skip>
+        <maven.deploy.skip>false</maven.deploy.skip>
         <maven.plugin.compiler.version>3.8.1</maven.plugin.compiler.version>
         <maven.plugin.frontend.version>1.6</maven.plugin.frontend.version>
         <maven.plugin.assembly.version>3.5.0</maven.plugin.assembly.version>
@@ -126,6 +128,8 @@
         <semver.version>0.9.0</semver.version>
         <auto-service.version>1.0.1</auto-service.version>
         <logbook.version>3.9.0</logbook.version>
+        <pf4j.version>3.12.0</pf4j.version>
+        <pf4j-spring.version>0.9.0</pf4j-spring.version>
     </properties>
 
     <dependencyManagement>
@@ -176,6 +180,23 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-security-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-plugin-test-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-server</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -412,6 +433,17 @@
                 <groupId>com.flipkart.zjsonpatch</groupId>
                 <artifactId>zjsonpatch</artifactId>
                 <version>${zjsonpatch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.pf4j</groupId>
+                <artifactId>pf4j</artifactId>
+                <version>${pf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.pf4j</groupId>
+                <artifactId>pf4j-spring</artifactId>
+                <version>${pf4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
