--- a/carp-plugins/carp-plugin-test/carp-plugin-test-2/pom.xml
+++ b/carp-plugins/carp-plugin-test/carp-plugin-test-2/pom.xml
@@ -22,14 +22,34 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-module-security</artifactId>
+        <artifactId>carp-plugin-test</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-security-spring</artifactId>
+    <artifactId>carp-plugin-test-2</artifactId>
 
-    <properties>
-        <maven.deploy.skip>false</maven.deploy.skip>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-plugin-test-api</artifactId>
+            <!-- !!! VERY IMPORTANT -->
+            <scope>provided</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>org.pf4j</groupId>
+            <artifactId>pf4j</artifactId>
+            <!-- !!! VERY IMPORTANT -->
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <!-- !!! VERY IMPORTANT -->
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
