--- a/tools/docker/local/docker-compose.yml
+++ b/tools/docker/local/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - ../mysql/my_custom.cnf:/opt/bitnami/mysql/conf/my_custom.cnf
       - ../mysql/init.d:/docker-entrypoint-initdb.d
     networks:
-      - scaleph
+      - carp
 
   redis:
     image: bitnami/redis:7.0.10
@@ -50,7 +50,7 @@ services:
     ports:
       - 6379:6379
     networks:
-      - scaleph
+      - carp
 
   minio:
     image: bitnami/minio:2023.3.24
@@ -63,8 +63,8 @@ services:
       - 9000:9000
       - 9001:9001
     networks:
-      - scaleph
+      - carp
 
 networks:
-  scaleph:
+  carp:
     driver: bridge
