--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
         <jgrapht.version>1.5.2</jgrapht.version>
         <zjsonpatch.version>0.4.14</zjsonpatch.version>
         <semver.version>0.9.0</semver.version>
-        <auto-service.version>1.0.1</auto-service.version>
+        <auto-service.version>1.1.1</auto-service.version>
         <logbook.version>3.9.0</logbook.version>
         <pf4j.version>3.12.0</pf4j.version>
         <pf4j-spring.version>0.9.0</pf4j-spring.version>
@@ -434,6 +434,12 @@
                 <groupId>com.flipkart.zjsonpatch</groupId>
                 <artifactId>zjsonpatch</artifactId>
                 <version>${zjsonpatch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.auto.service</groupId>
+                <artifactId>auto-service</artifactId>
+                <version>${auto-service.version}</version>
             </dependency>
 
             <dependency>
