--- a/.github/workflows/release-maven.yml
+++ b/.github/workflows/release-maven.yml
@@ -14,39 +14,37 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: CI-Maven
+name: Release
 
 on:
-  workflow_dispatch:
-  workflow_call:
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*'
 
 jobs:
-  build:
-    if: github.repository == 'flowerfine/carp'
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        jdk: [ 17 ]
-    runs-on: ${{ matrix.os }}
+  release:
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - name: Setup Java JDK ${{ matrix.jdk }}
+      - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          java-version: ${{ matrix.jdk }}
+          java-version: 17
           distribution: temurin
           cache: maven
-      - name: Build with Maven
-        timeout-minutes: 360
-        run: ./mvnw -B -U -T 4C clean package -Pdist -Dfast
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./**/target/site/jacoco/jacoco.xml
-          verbose: true
-      
-      
+          server-id: sonatype-nexus
+          server-username: OSSRH_USERNAME
+          server-password: OSSRH_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_SECRET }}
+          gpg-passphrase: GPG_PASSWORD
+      - name: Publish to Sonatype Nexus
+        run: ./mvnw -B -U -T 4C clean deploy -Pdist -Dfast -DskipTests -Poss-release -Dgpg.passphrase=${{ secrets.GPG_PASSWORD }}
+        env:
+          OSSRH_USERNAME: ${{ secrets.SONATYPE_USER }}
+          OSSRH_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          GPG_PASSWORD: ${{ secrets.GPG_PASSWORD }}
