--- a/carp-dist/pom.xml
+++ b/carp-dist/pom.xml
@@ -27,6 +27,11 @@
     </parent>
     <artifactId>carp-dist</artifactId>
 
+    <properties>
+        <maven.test.skip>true</maven.test.skip>
+        <maven.deploy.skip>false</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
