--- a/carp-modules/carp-module-security/carp-module-security-sa-token/pom.xml
+++ b/carp-modules/carp-module-security/carp-module-security-sa-token/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>carp-module-security-sa-token</artifactId>
 
     <properties>
-        <maven.deploy.skip>false</maven.deploy.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <dependencies>
