--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-security-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-plugin</artifactId>
                 <version>${project.version}</version>
             </dependency>
