--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <module>carp-support</module>
         <module>carp-modules</module>
         <module>carp-dist</module>
+        <module>carp-examples</module>
     </modules>
 
     <properties>
@@ -157,6 +158,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-exception</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-framework-mongo</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
