--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,9 @@
 
         <mybatis.version>3.0.3</mybatis.version>
         <mybatis.plus.version>3.5.6</mybatis.plus.version>
+
+        <mybatis.version>3.0.3</mybatis.version>
+        <mybatis.plus.version>3.5.6</mybatis.plus.version>
         <velocity.engine.version>2.2</velocity.engine.version>
         <mysql.version>8.3.0</mysql.version>
 
