feature: update kubernetes module

--- a/carp-server/pom.xml
+++ b/carp-server/pom.xml
@@ -44,6 +44,10 @@
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-plugin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-kubernetes</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
