--- a/carp-modules/pom.xml
+++ b/carp-modules/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <artifactId>carp-modules</artifactId>
     <packaging>pom</packaging>
