feature: add vela api

--- a/carp-modules/carp-module-application/pom.xml
+++ b/carp-modules/carp-module-application/pom.xml
@@ -22,24 +22,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-module-security</artifactId>
+        <artifactId>carp-modules</artifactId>
         <version>0.0.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-security-core</artifactId>
+    <artifactId>carp-module-application</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-mybatis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-web</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>carp-module-application-oam</module>
+        <module>carp-module-application-vela</module>
+    </modules>
 </project>
