--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
         <maven.plugin.frontend.version>1.6</maven.plugin.frontend.version>
         <maven.plugin.assembly.version>3.5.0</maven.plugin.assembly.version>
 
+        <spring.cloud.version>2023.0.1</spring.cloud.version>
         <spring.boot.version>3.3.0</spring.boot.version>
         <org.mapstruct.extensions.spring.version>0.1.1</org.mapstruct.extensions.spring.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
@@ -132,6 +133,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -190,6 +198,11 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-application-vela</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-security-core</artifactId>
