--- a/carp-modules/carp-module-application/carp-module-application-oam/pom.xml
+++ b/carp-modules/carp-module-application/carp-module-application-oam/pom.xml
@@ -22,24 +22,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-module-security</artifactId>
+        <artifactId>carp-module-application</artifactId>
         <version>0.0.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-security-core</artifactId>
+    <artifactId>carp-module-application-oam</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-mybatis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-framework-web</artifactId>
-        </dependency>
-    </dependencies>
 </project>
