feature: add vela feign api

--- a/carp-examples/pom.xml
+++ b/carp-examples/pom.xml
@@ -30,6 +30,7 @@
 
     <modules>
         <module>carp-mongo-example</module>
+        <module>carp-pekko-example</module>
     </modules>
 
     <properties>
